[metadata]
Name = jenkins2sql
summary = Gate Observer
description-file =
    README.rst
author = Trevor McCasland
author-email = trevormccasland1@gmail.com
version = 1.0.0
classifier =
    Environment :: Jenkins
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    jenkins2sql
data_files =
     etc/jenkins2sql = etc/*

[entry_points]
console_scripts =
    jenkins2sql = jenkins2sql.api:main
